# container-dns

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml  test.yml
docs/: caddy.md  systemd-resolved.md
src/: main.rs
src/lib/: mod.rs
src/lib/config/: mod.rs
src/lib/containers/: mod.rs
src/lib/containers/linux/: mod.rs
src/lib/containers/linux/namespaces/: mod.rs
src/lib/containers/linux/process/: mod.rs  tests.rs
src/lib/dns/: mod.rs
src/lib/dns/container/: mod.rs
src/lib/dns/container/authority/: mod.rs
src/lib/dns/container/load/: mod.rs
src/lib/dns/container/record_handler/: mod.rs  tests.rs
src/lib/dns/container/store/: mod.rs
src/lib/dns/container_authority/: mod.rs  tests.rs
src/lib/dns/server/: mod.rs
src/lib/dns/settings/: mod.rs
src/lib/metrics/: mod.rs
tests/: bind_ports.py  e2e.py  e2e_config.toml
