[package]
name = "container-dns"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "container-dns"
path = "src/main.rs"

[lib]
name = "container_dns"
path = "src/lib/mod.rs"

[dependencies]
async-trait = "0.1.89"
hickory-proto = "0.25.2"
hickory-resolver = "0.25.2"
hickory-server = "0.25.2"
ipnet = "2.11.0"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = "1.47.1"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.176"
nix = { version = "0.30.1", features = ["dir", "hostname", "net", "sched"] }
procfs = "0.18.0"
sysctl = "0.7.1"
servicefile = "0.3.0"
